# RDMS

./: .deletion_operation.cpp.swp  CMakeLists.txt  README.md  data_cleaning.cpp  data_preparation.cpp  deletion_operation.cpp  eta_update.cpp  head.h  main.cpp  makefile  simulation.cpp  update.cpp
data/: query_10k
data/new_data_update/: deletion_routeNode  deletion_routeRoad  deletion_routeRoadIndex  test_Pi  test_depar  test_route
